# ProjectSweet

./: db.sqlite3  manage.py  pyproject.toml  server.py
_sweetsaratov_/: asgi.py  settings.py  urls.py  views.py  widgets.py  wsgi.py
_sweetsaratov_/static/css/: forms.css
_sweetsaratov_/templates/: base.html  catalog.html
_sweetsaratov_/templates/cakes/: cakelist.html  child.html  child_new.html
_sweetsaratov_/templates/forum/: all.html  forum.html  new_post.html  titul.html
_sweetsaratov_/templates/info/: contacts.html  order.html
_sweetsaratov_/templates/main/: main.html
_sweetsaratov_/templates/payment/: info_payment.html  payment.html
_sweetsaratov_/templates/users/: base.html  login.html  register.html
apps/basket/: models.py  urls.py  views.py
apps/basket/migrations/: 0001_initial.py
apps/catalog/: models.py  urls.py  views.py
apps/catalog/migrations/: 0001_initial.py  0002_rename_content_catalog_description_catalog_foto_and_more.py
apps/forum/: forms.py  models.py  urls.py  views.py  нрпаапта.py  цуауццукпцкпццу.py
apps/forum/migrations/: 0001_initial.py  0002_initial.py  0003_rename_sender_id_forummessage_sender_and_more.py
apps/info/: apps.py  urls.py  views.py
apps/main/: models.py  urls.py  views.py
apps/main/migrations/: 0001_initial.py
apps/msg/: apps.py  models.py  urls.py  views.py
apps/msg/migrations/: 0001_initial.py  0002_initial.py
apps/payment/: models.py  urls.py  views.py
apps/payments/: apps.py  models.py  urls.py  uuo.py  views.py  цацпц.py  цеце.py
apps/users/: forms.py  urls.py  views.py
(+3 files in other folders)
