[tool.poetry]
name = "pythonproject-sweet"
version = "0.1.0"
description = ""
authors = ["EOV <sweet16102019@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
django-payments = {extras = ["mercadopago"], version = "^3.0.1"}
dj-static = "^0.0.6"
waitress = "^3.0.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
